--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -18,6 +18,14 @@
 	</properties>
 	<dependencies>
 
+    	<dependency>
+    		<groupId>io.openliberty.features</groupId>
+    		<artifactId>beanValidation-2.0</artifactId>
+    		<version>22.0.0.5</version>
+    		<type>esa</type>
+    	</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -43,12 +51,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>io.openliberty.features</groupId>
-			<artifactId>beanValidation-2.0</artifactId>
-			<version>22.0.0.4</version>
 		</dependency>
 
 		<dependency>
