upload de fotos de um post

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ blog/.vscode/settings.json
 blog_dr_devweb_defin.mwb
 blog_dr_devweb_defin.mwb.bak
 blog_dr_devweb_defin.mwb
+blog_dr_devweb_defin.mwb
+blog/src/main/resources/static/post-fotos
+blog/target
