--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ blog_dr_devweb_defin.mwb
 blog_dr_devweb_defin.mwb.bak
 blog_dr_devweb_defin.mwb
 blog_dr_devweb_defin.mwb
-blog/src/main/resources/static/post-fotos
+blog/post-fotos
 blog/target
